--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,15 @@
 language: ruby
 rvm:
   - 2.6
+env:
+  matrix:
+      - DB=postgresql
 services:
   - postgresql
 script:
-  - rake db:migrate RAILS_ENV=test
+  - RAILS_ENV=test bundle exec rake db:schema:load --trace
+  - bundle exec rake db:test:prepare
   - bundle exec rspec spec/
 before_script:
   - cp config/database.yml.travis config/database.yml
+  - psql -c 'create database travis_ci_test' -U postgres
